Tablas director, pelicula, premio_mejor_director y premio_mejor_pelicula terminadas
Me parece que la tabla de director tiene un problema el cual hay que solucionar.

--- a/Tarea_1.ipynb
+++ b/Tarea_1.ipynb
@@ -54,6 +54,7 @@
     "deepnote_to_be_reexecuted": false,
     "execution_millis": 3569,
     "execution_start": 1712531404874,
+    "scrolled": true,
     "source_hash": null
    },
    "outputs": [
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "cell_id": "0f6b0a29b4c04cf293967fac6d180a8a",
     "deepnote_cell_type": "code",
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
     "cell_id": "34b633c6d4994c11b467d838c80e3207",
     "deepnote_cell_type": "code",
@@ -202,13 +203,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "env: DATABASE_URL=postgresql://postgres:1234@localhost:5432/tarea1\n"
+      "env: DATABASE_URL=postgresql://postgres:123456789@localhost:5432/TAREA1\n"
      ]
     }
    ],
    "source": [
     "%reload_ext sql\n",
-    "%env DATABASE_URL=postgresql://postgres:1234@localhost:5432/tarea1"
+    "%env DATABASE_URL=postgresql://postgres:123456789@localhost:5432/TAREA1"
    ]
   },
   {
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "cell_id": "2476ab9277374b57916c6f58324f2f59",
     "deepnote_cell_type": "code",
@@ -237,7 +238,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<connection object at 0x000001D1528C46A0; dsn: 'user=postgres password=xxx dbname=tarea1 host=localhost', closed: 0>\n"
+      "<connection object at 0x00000132DC6CA350; dsn: 'user=postgres password=xxx dbname=TAREA1 host=localhost', closed: 0>\n"
      ]
     }
    ],
@@ -246,8 +247,8 @@
     "conn = psycopg2.connect(\n",
     "   host=\"localhost\",\n",
     "   user=\"postgres\",\n",
-    "   dbname='tarea1',\n",
-    "   password=\"1234\"\n",
+    "   dbname='TAREA1',\n",
+    "   password=\"123456789\"\n",
     ")\n",
     "\n",
     "print(conn)\n"
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "cell_id": "31aef4174d9148b9a9694b0f6b9e39da",
     "deepnote_cell_type": "code",
@@ -288,15 +289,29 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UsageError: Cell magic `%%sql` not found.\n"
+      " * postgresql://postgres:***@localhost:5432/TAREA1\n",
+      "(psycopg2.errors.DuplicateTable) la relación «director» ya existe\n",
+      "\n",
+      "[SQL: CREATE TABLE director (\n",
+      "    id_director INT PRIMARY KEY,\n",
+      "    nombre VARCHAR(45),\n",
+      "    edad INT\n",
+      ");]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
      ]
     }
    ],
    "source": [
-    "print(\"mensaje cualquiera\")\n"
+    "%%sql\n",
+    "\n",
+    "CREATE TABLE director (\n",
+    "    id_director INT PRIMARY KEY,\n",
+    "    nombre VARCHAR(45),\n",
+    "    edad INT\n",
+    ");"
    ]
   },
   {
@@ -311,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "cell_id": "d7a0672f5fad4b9abedfc895c7de2756",
     "deepnote_cell_type": "code",
@@ -325,12 +340,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "UsageError: Cell magic `%%sql` not found.\n"
+      "UsageError: %%sql is a cell magic, but the cell body is empty. Did you mean the line magic %sql (single %)?\n"
      ]
     }
    ],
    "source": [
-    "print(\"pruebas github\")"
+    "%%sql\n"
    ]
   },
   {
@@ -345,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "cell_id": "bf630f8832cf4b4db05a2d6ddf09b1b5",
     "deepnote_cell_type": "code",
@@ -357,15 +372,37 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UsageError: Cell magic `%%sql` not found.\n"
+      " * postgresql://postgres:***@localhost:5432/TAREA1\n",
+      "(psycopg2.errors.DuplicateTable) la relación «pelicula» ya existe\n",
+      "\n",
+      "[SQL: CREATE TABLE pelicula (\n",
+      "    id_pelicula INT PRIMARY KEY,\n",
+      "    id_director INT,\n",
+      "    nombre VARCHAR(45) NOT NULL,\n",
+      "    genero VARCHAR(45),\n",
+      "    duracion INT,\n",
+      "    fecha_publicacion DATE,\n",
+      "    FOREIGN KEY (id_director) REFERENCES director (id_director)\n",
+      ");]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
      ]
     }
    ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "\n",
+    "CREATE TABLE pelicula (\n",
+    "    id_pelicula INT PRIMARY KEY,\n",
+    "    id_director INT,\n",
+    "    nombre VARCHAR(45) NOT NULL,\n",
+    "    genero VARCHAR(45),\n",
+    "    duracion INT,\n",
+    "    fecha_publicacion DATE,\n",
+    "    FOREIGN KEY (id_director) REFERENCES director (id_director)\n",
+    ");"
    ]
   },
   {
@@ -414,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "cell_id": "72925f8811534b0882bf465637d1e3c6",
     "deepnote_cell_type": "code",
@@ -426,23 +463,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * postgresql://postgres:***@localhost:5432/tarea1bd\n",
-      "Done.\n"
+      " * postgresql://postgres:***@localhost:5432/TAREA1\n",
+      "(psycopg2.errors.DuplicateTable) la relación «preimio_mejor_director» ya existe\n",
+      "\n",
+      "[SQL: CREATE TABLE preimio_mejor_director (\n",
+      "    id_premio INT PRIMARY KEY,\n",
+      "    id_director INT,\n",
+      "    anio INT NOT NULL,\n",
+      "    FOREIGN KEY(id_director) REFERENCES director(id_director)\n",
+      ");]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "\n",
+    "CREATE TABLE preimio_mejor_director (\n",
+    "    id_premio INT PRIMARY KEY,\n",
+    "    id_director INT,\n",
+    "    anio INT NOT NULL,\n",
+    "    FOREIGN KEY(id_director) REFERENCES director(id_director)\n",
+    ");"
    ]
   },
   {
@@ -492,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "allow_embed": false,
     "cell_id": "075fe83e58cf4a24a555c953fc4648be",
@@ -504,15 +546,33 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UsageError: Cell magic `%%sql` not found.\n"
+      " * postgresql://postgres:***@localhost:5432/TAREA1\n",
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "\n",
+    "CREATE TABLE preimio_mejor_pelicula (\n",
+    "    id_premio INT PRIMARY KEY,\n",
+    "    id_pelicula INT,\n",
+    "    anio INT NOT NULL,\n",
+    "    FOREIGN KEY(id_pelicula) REFERENCES pelicula(id_pelicula)\n",
+    ");"
    ]
   },
   {
@@ -529,12 +589,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "cell_id": "a0068486078a4e03b972657d9afdcaf9",
     "deepnote_cell_type": "code"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "InFailedSqlTransaction",
+     "evalue": "transacción abortada, las órdenes serán ignoradas hasta el fin de bloque de transacción\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mInFailedSqlTransaction\u001b[0m                    Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[34], line 29\u001b[0m\n\u001b[0;32m     27\u001b[0m nombre \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mchoice(nombres) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m random\u001b[38;5;241m.\u001b[39mchoice(apellidos)\n\u001b[0;32m     28\u001b[0m edad \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m30\u001b[39m,\u001b[38;5;241m90\u001b[39m)\n\u001b[1;32m---> 29\u001b[0m \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mINSERT INTO director (nombre, edad) VALUES (\u001b[39;49m\u001b[38;5;132;43;01m%s\u001b[39;49;00m\u001b[38;5;124;43m, \u001b[39;49m\u001b[38;5;132;43;01m%s\u001b[39;49;00m\u001b[38;5;124;43m) RETURNING id_director\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mnombre\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43medad\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     30\u001b[0m id_director \u001b[38;5;241m=\u001b[39m cursor\u001b[38;5;241m.\u001b[39mfetchone()[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m     31\u001b[0m directores_ids\u001b[38;5;241m.\u001b[39mappend(id_director)\n",
+      "\u001b[1;31mInFailedSqlTransaction\u001b[0m: transacción abortada, las órdenes serán ignoradas hasta el fin de bloque de transacción\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "from datetime import date\n",
@@ -684,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "cell_id": "0942a088ae5b4e128b84ef188e259b82",
     "deepnote_cell_type": "code",
@@ -696,37 +768,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * postgresql://postgres:***@localhost:5432/tarea_1\n",
-      "0 rows affected.\n"
+      " * postgresql://postgres:***@localhost:5432/TAREA1\n",
+      "(psycopg2.errors.UndefinedColumn) no existe la columna «dune_2»\n",
+      "LINE 2: SELECT Dune_2\n",
+      "               ^\n",
+      "\n",
+      "[SQL: /* Reemplace estas queries por las que resuelven las consultas pedidas. */\n",
+      "SELECT Dune_2\n",
+      "FROM pelicula\n",
+      "WHERE EXTRACT(YEAR FROM fecha_publicacion) = EXTRACT(YEAR FROM CURRENT_DATE) - 1;]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>nombre</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "/* Reemplace estas queries por las que resuelven las consultas pedidas. */\n",
-    "\n",
-    "\n"
+    "/* Reemplace estas queries por las que resuelven las consultas pedidas. */"
    ]
   },
   {
