--- a/Tarea_1.ipynb
+++ b/Tarea_1.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "cell_id": "31aef4174d9148b9a9694b0f6b9e39da",
     "deepnote_cell_type": "code",
@@ -296,7 +296,7 @@
     }
    ],
    "source": [
-    "print(\"mensaje cualquiera\")\n"
+    "%%sql\n"
    ]
   },
   {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "cell_id": "d7a0672f5fad4b9abedfc895c7de2756",
     "deepnote_cell_type": "code",
@@ -330,14 +330,21 @@
     }
    ],
    "source": [
-    "print(\"pruebas github\")"
+    "%%sql\n",
+    "\n",
+    "CREATE TABLE actor (\n",
+    "    id_actor INT PRIMARY KEY,\n",
+    "    nombre VARCHAR(45),\n",
+    "    edad INT\n",
+    ");"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "cell_id": "58b2f61e0a8c4abab8727b477fe3f430",
-    "deepnote_cell_type": "markdown"
+    "deepnote_cell_type": "markdown",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
     "### Tabla \"Pelicula\""
@@ -365,8 +372,7 @@
     }
    ],
    "source": [
-    "\n",
-    "print(\"final\")"
+    "%%sql"
    ]
   },
   {
@@ -400,7 +406,15 @@
     }
    ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "\n",
+    "CREATE TABLE actor_participa_en_pelicula (\n",
+    "    id_actor INT,\n",
+    "    id_pelicula INT,\n",
+    "    PRIMARY KEY (id_actor, id_pelicula),\n",
+    "    FOREIGN KEY (id_actor) REFERENCES actor(id_actor),\n",
+    "    FOREIGN KEY (id_pelicula) REFERENCES pelicula(id_pelicula)\n",
+    ");\n"
    ]
   },
   {
@@ -458,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "allow_embed": false,
     "cell_id": "466ce407e4544bb384cd66e5612efc6f",
@@ -478,7 +492,14 @@
     }
    ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "\n",
+    "CREATE TABLE premio_mejor_actor (\n",
+    "    id_premio INT PRIMARY KEY,\n",
+    "    id_actor INT,\n",
+    "    anio INT,\n",
+    "    FOREIGN KEY (id_actor) REFERENCES actor(id_actor)\n",
+    ");\n"
    ]
   },
   {
