--- a/Tarea_1.ipynb
+++ b/Tarea_1.ipynb
@@ -296,7 +296,13 @@
     }
    ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "\n",
+    "CREATE TABLE director (\n",
+    "    id_director INT PRIMARY KEY,\n",
+    "    nombre VARCHAR(45),\n",
+    "    edad INT\n",
+    ");"
    ]
   },
   {
@@ -343,8 +349,7 @@
    "cell_type": "markdown",
    "metadata": {
     "cell_id": "58b2f61e0a8c4abab8727b477fe3f430",
-    "deepnote_cell_type": "markdown",
-    "jp-MarkdownHeadingCollapsed": true
+    "deepnote_cell_type": "markdown"
    },
    "source": [
     "### Tabla \"Pelicula\""
