--- a/Tarea_1.ipynb
+++ b/Tarea_1.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 147,
    "metadata": {
     "cell_id": "2476ab9277374b57916c6f58324f2f59",
     "deepnote_cell_type": "code",
@@ -191,7 +191,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<connection object at 0x000001D87BB698B0; dsn: 'user=postgres password=xxx dbname=tarea1 host=localhost', closed: 0>\n"
+      "<connection object at 0x000001D87D1F1140; dsn: 'user=postgres password=xxx dbname=tarea1 host=localhost', closed: 0>\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 185,
    "metadata": {
     "cell_id": "31aef4174d9148b9a9694b0f6b9e39da",
     "deepnote_cell_type": "code",
@@ -246,25 +246,31 @@
      "output_type": "stream",
      "text": [
       " * postgresql://postgres:***@localhost:5432/tarea1\n",
-      "(psycopg2.errors.DuplicateTable) la relación «director» ya existe\n",
-      "\n",
-      "[SQL: CREATE TABLE director (\n",
-      "    id_director INT PRIMARY KEY,\n",
-      "    nombre VARCHAR(45),\n",
-      "    edad INT \n",
-      ");]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
+      "Done.\n",
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
+    "DROP TABLE IF EXISTS director CASCADE;\n",
     "\n",
     "CREATE TABLE director (\n",
-    "    id_director INT PRIMARY KEY,\n",
+    "    id_director INT PRIMARY KEY GENERATED ALWAYS AS IDENTITY,\n",
     "    nombre VARCHAR(45),\n",
-    "    edad INT \n",
-    ");"
+    "    edad INT\n",
+    ");\n",
+    "\n"
    ]
   },
   {
@@ -279,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 186,
    "metadata": {
     "cell_id": "d7a0672f5fad4b9abedfc895c7de2756",
     "deepnote_cell_type": "code",
@@ -294,22 +300,26 @@
      "output_type": "stream",
      "text": [
       " * postgresql://postgres:***@localhost:5432/tarea1\n",
-      "(psycopg2.errors.DuplicateTable) la relación «actor» ya existe\n",
-      "\n",
-      "[SQL: CREATE TABLE actor (\n",
-      "    id_actor INT PRIMARY KEY,\n",
-      "    nombre VARCHAR(45),\n",
-      "    edad INT\n",
-      ");]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
+      "Done.\n",
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "\n",
+    "DROP TABLE IF EXISTS actor CASCADE;\n",
     "CREATE TABLE actor (\n",
-    "    id_actor INT PRIMARY KEY,\n",
+    "    id_actor INT PRIMARY KEY GENERATED ALWAYS AS IDENTITY,\n",
     "    nombre VARCHAR(45),\n",
     "    edad INT\n",
     ");"
@@ -327,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 187,
    "metadata": {
     "cell_id": "bf630f8832cf4b4db05a2d6ddf09b1b5",
     "deepnote_cell_type": "code",
@@ -343,26 +353,26 @@
      "output_type": "stream",
      "text": [
       " * postgresql://postgres:***@localhost:5432/tarea1\n",
-      "(psycopg2.errors.DuplicateTable) la relación «pelicula» ya existe\n",
-      "\n",
-      "[SQL: CREATE TABLE pelicula (\n",
-      "    id_pelicula INT PRIMARY KEY,\n",
-      "    id_director INT,\n",
-      "    nombre VARCHAR(45) NOT NULL,\n",
-      "    genero VARCHAR(45),\n",
-      "    duracion INT,\n",
-      "    fecha_publicacion DATE,\n",
-      "    FOREIGN KEY (id_director) REFERENCES director (id_director)\n",
-      ");]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
+      "Done.\n",
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "\n",
+    "DROP TABLE IF EXISTS pelicula CASCADE;\n",
     "CREATE TABLE pelicula (\n",
-    "    id_pelicula INT PRIMARY KEY,\n",
+    "    id_pelicula INT PRIMARY KEY GENERATED ALWAYS AS IDENTITY,\n",
     "    id_director INT,\n",
     "    nombre VARCHAR(45) NOT NULL,\n",
     "    genero VARCHAR(45),\n",
@@ -384,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 188,
    "metadata": {
     "cell_id": "73f3a63cb5214eb785205642daad9e4e",
     "deepnote_cell_type": "code",
@@ -399,22 +409,24 @@
      "output_type": "stream",
      "text": [
       " * postgresql://postgres:***@localhost:5432/tarea1\n",
-      "(psycopg2.errors.DuplicateTable) la relación «actor_participa_en_pelicula» ya existe\n",
-      "\n",
-      "[SQL: CREATE TABLE actor_participa_en_pelicula (\n",
-      "    id_actor INT,\n",
-      "    id_pelicula INT,\n",
-      "    PRIMARY KEY (id_actor, id_pelicula),\n",
-      "    FOREIGN KEY (id_actor) REFERENCES actor(id_actor),\n",
-      "    FOREIGN KEY (id_pelicula) REFERENCES pelicula(id_pelicula)\n",
-      ");]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
+      "Done.\n",
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "\n",
+    "DROP TABLE IF EXISTS actor_participa_en_pelicula CASCADE;\n",
     "CREATE TABLE actor_participa_en_pelicula (\n",
     "    id_actor INT,\n",
     "    id_pelicula INT,\n",
@@ -436,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 189,
    "metadata": {
     "cell_id": "72925f8811534b0882bf465637d1e3c6",
     "deepnote_cell_type": "code",
@@ -449,23 +461,27 @@
      "output_type": "stream",
      "text": [
       " * postgresql://postgres:***@localhost:5432/tarea1\n",
-      "(psycopg2.errors.DuplicateTable) la relación «preimio_mejor_director» ya existe\n",
-      "\n",
-      "[SQL: CREATE TABLE preimio_mejor_director (\n",
-      "    id_premio INT PRIMARY KEY,\n",
-      "    id_director INT,\n",
-      "    anio INT NOT NULL,\n",
-      "    FOREIGN KEY(id_director) REFERENCES director(id_director)\n",
-      ");]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
+      "Done.\n",
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
     "\n",
-    "CREATE TABLE preimio_mejor_director (\n",
-    "    id_premio INT PRIMARY KEY,\n",
+    "DROP TABLE IF EXISTS  premio_mejor_director CASCADE;\n",
+    "CREATE TABLE premio_mejor_director (\n",
+    "    id_premio INT PRIMARY KEY GENERATED ALWAYS AS IDENTITY ,\n",
     "    id_director INT,\n",
     "    anio INT NOT NULL,\n",
     "    FOREIGN KEY(id_director) REFERENCES director(id_director)\n",
@@ -484,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 190,
    "metadata": {
     "allow_embed": false,
     "cell_id": "466ce407e4544bb384cd66e5612efc6f",
@@ -500,23 +516,26 @@
      "output_type": "stream",
      "text": [
       " * postgresql://postgres:***@localhost:5432/tarea1\n",
-      "(psycopg2.errors.DuplicateTable) la relación «premio_mejor_actor» ya existe\n",
-      "\n",
-      "[SQL: CREATE TABLE premio_mejor_actor (\n",
-      "    id_premio INT PRIMARY KEY,\n",
-      "    id_actor INT,\n",
-      "    anio INT,\n",
-      "    FOREIGN KEY (id_actor) REFERENCES actor(id_actor)\n",
-      ");]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
+      "Done.\n",
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "\n",
+    "DROP TABLE IF EXISTS premio_mejor_actor CASCADE;\n",
     "CREATE TABLE premio_mejor_actor (\n",
-    "    id_premio INT PRIMARY KEY,\n",
+    "    id_premio INT PRIMARY KEY GENERATED ALWAYS AS IDENTITY,\n",
     "    id_actor INT,\n",
     "    anio INT,\n",
     "    FOREIGN KEY (id_actor) REFERENCES actor(id_actor)\n",
@@ -535,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 191,
    "metadata": {
     "allow_embed": false,
     "cell_id": "075fe83e58cf4a24a555c953fc4648be",
@@ -551,23 +570,27 @@
      "output_type": "stream",
      "text": [
       " * postgresql://postgres:***@localhost:5432/tarea1\n",
-      "(psycopg2.errors.DuplicateTable) la relación «preimio_mejor_pelicula» ya existe\n",
-      "\n",
-      "[SQL: CREATE TABLE preimio_mejor_pelicula (\n",
-      "    id_premio INT PRIMARY KEY,\n",
-      "    id_pelicula INT,\n",
-      "    anio INT NOT NULL,\n",
-      "    FOREIGN KEY(id_pelicula) REFERENCES pelicula(id_pelicula)\n",
-      ");]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
+      "Done.\n",
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
     "\n",
-    "CREATE TABLE preimio_mejor_pelicula (\n",
-    "    id_premio INT PRIMARY KEY,\n",
+    "DROP TABLE IF EXISTS premio_mejor_pelicula CASCADE;\n",
+    "CREATE TABLE premio_mejor_pelicula (\n",
+    "    id_premio INT PRIMARY KEY GENERATED ALWAYS AS IDENTITY,\n",
     "    id_pelicula INT,\n",
     "    anio INT NOT NULL,\n",
     "    FOREIGN KEY(id_pelicula) REFERENCES pelicula(id_pelicula)\n",
@@ -588,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 192,
    "metadata": {
     "cell_id": "a0068486078a4e03b972657d9afdcaf9",
     "deepnote_cell_type": "code"
@@ -601,7 +624,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mInFailedSqlTransaction\u001b[0m                    Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[34], line 29\u001b[0m\n\u001b[0;32m     27\u001b[0m nombre \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mchoice(nombres) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m random\u001b[38;5;241m.\u001b[39mchoice(apellidos)\n\u001b[0;32m     28\u001b[0m edad \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m30\u001b[39m,\u001b[38;5;241m90\u001b[39m)\n\u001b[1;32m---> 29\u001b[0m \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mINSERT INTO director (nombre, edad) VALUES (\u001b[39;49m\u001b[38;5;132;43;01m%s\u001b[39;49;00m\u001b[38;5;124;43m, \u001b[39;49m\u001b[38;5;132;43;01m%s\u001b[39;49;00m\u001b[38;5;124;43m) RETURNING id_director\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mnombre\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43medad\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     30\u001b[0m id_director \u001b[38;5;241m=\u001b[39m cursor\u001b[38;5;241m.\u001b[39mfetchone()[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m     31\u001b[0m directores_ids\u001b[38;5;241m.\u001b[39mappend(id_director)\n",
+      "Cell \u001b[1;32mIn[192], line 29\u001b[0m\n\u001b[0;32m     27\u001b[0m nombre \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mchoice(nombres) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m random\u001b[38;5;241m.\u001b[39mchoice(apellidos)\n\u001b[0;32m     28\u001b[0m edad \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m30\u001b[39m,\u001b[38;5;241m90\u001b[39m)\n\u001b[1;32m---> 29\u001b[0m \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mINSERT INTO director (nombre, edad) VALUES (\u001b[39;49m\u001b[38;5;132;43;01m%s\u001b[39;49;00m\u001b[38;5;124;43m, \u001b[39;49m\u001b[38;5;132;43;01m%s\u001b[39;49;00m\u001b[38;5;124;43m) RETURNING id_director\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mnombre\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43medad\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     30\u001b[0m id_director \u001b[38;5;241m=\u001b[39m cursor\u001b[38;5;241m.\u001b[39mfetchone()[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m     31\u001b[0m directores_ids\u001b[38;5;241m.\u001b[39mappend(id_director)\n",
       "\u001b[1;31mInFailedSqlTransaction\u001b[0m: transacción abortada, las órdenes serán ignoradas hasta el fin de bloque de transacción\n"
      ]
     }
