--- a/Tarea_1.ipynb
+++ b/Tarea_1.ipynb
@@ -20,9 +20,9 @@
    },
    "source": [
     "## Integrantes:\n",
-    "* Nombre Integrante 1 - Rol-1\n",
-    "* Nombre Integrante 2 - Rol-2\n",
-    "* Nombre Integrante 3 - Rol-3"
+    "* Fernanda Ojeda - 202273025-0\n",
+    "* Benjamin Reyes - 202273053-6\n",
+    "* Sebastian Reyes - 202273105-2"
    ]
   },
   {
