--- a/Tarea_1.ipynb
+++ b/Tarea_1.ipynb
@@ -7,9 +7,8 @@
     "deepnote_cell_type": "markdown"
    },
    "source": [
-    "# Tarea 1 Bases de Datos 2024-1 Grupo XX\n",
-    "\n",
-    "_Recuerde modificar esta celda y la siguiente! (Borre esta línea también)._"
+    "# Tarea 1 Bases de Datos 2024-1 Grupo 16\n",
+    "\n"
    ]
   },
   {
@@ -819,8 +818,8 @@
     "FROM pelicula\n",
     "WHERE fecha_publicacion > CURRENT_DATE - INTERVAL '1 year';\n",
     "\n",
-    "\n",
-    "\n"
+    "#Esta consulta selecciona el nombre de las película de la tabla 'pelicula' , \n",
+    "#luego busca la fecha de publicación; para ver si cumple con el requisito, utiliza la fecha actual y le resta un año a esa fecha.\n"
    ]
   },
   {
@@ -894,7 +893,9 @@
     "FROM pelicula\n",
     "WHERE genero = 'Drama'\n",
     "AND EXTRACT(YEAR FROM fecha_publicacion) = 2023;\n",
-    "\n"
+    "\n",
+    "#Esta consulta selecciona el nombre y la fecha de publicación de la tabla pelicula, luego busca que el genero sea drama,\n",
+    "#que es el cual requerimos, seguidamente compara la fecha de publicacion con el año 2023. "
    ]
   },
   {
@@ -1155,6 +1156,10 @@
     "JOIN pelicula ON actor_participa_en_pelicula.id_pelicula = pelicula.id_pelicula\n",
     "WHERE pelicula.genero = 'Comedia';\n",
     "\n",
+    "\n",
+    "# Esta consulta selecciona los nombres de los actores que participaron en películas de género \"Comedia\". \n",
+    "# Para ello, realiza una serie de uniones entre las tablas 'actor', 'actor_participa_en_pelicula' y 'pelicula', \n",
+    "# y luego filtra las películas que pertenecen al género 'Comedia'.\n",
     "\n"
    ]
   },
@@ -1299,7 +1304,10 @@
     "GROUP BY p.genero\n",
     "ORDER BY cantidad_premios DESC;\n",
     "\n",
-    "\n",
+    "# Esta consulta selecciona el género de las películas y cuenta la cantidad de premios obtenidos por cada género.\n",
+    "# Para ello, realiza una unión entre las tablas 'pelicula' y 'premio_mejor_pelicula' utilizando el ID de la película.\n",
+    "# Luego agrupa los resultados por género y cuenta la cantidad de premios para cada género.\n",
+    "# Finalmente, ordena los resultados en orden descendente según la cantidad de premios.\n",
     "\n"
    ]
   },
@@ -2103,6 +2111,12 @@
     "GROUP BY pelicula.id_pelicula, pelicula.nombre\n",
     "HAVING COUNT(actor_participa_en_pelicula.id_actor) >= 2\n",
     "ORDER BY cantidad_actores DESC;\n",
+    "\n",
+    "# Esta consulta selecciona el nombre de las películas y cuenta la cantidad de actores que participaron en cada una.\n",
+    "# Para ello, realiza una unión entre las tablas 'pelicula' y 'actor_participa_en_pelicula' utilizando el ID de la película.\n",
+    "# Luego, agrupa los resultados por el ID y el nombre de la película.\n",
+    "# Posteriormente, filtra los resultados para incluir solo aquellas películas que tienen al menos dos actores.\n",
+    "# Finalmente, ordena los resultados en orden descendente según la cantidad de actores.\n",
     "\n"
    ]
   },
@@ -2208,7 +2222,9 @@
     "WHERE\n",
     "    Rank = 1;\n",
     "\n",
-    "\n",
+    "# Esta consulta calcula la brecha de edad entre el actor más joven y el más viejo para cada película. \n",
+    "# Luego, clasifica las películas en orden descendente según la brecha de edad y selecciona la película con la mayor brecha de edad.\n",
+    "# Devuelve el nombre de la película junto con las edades del actor más joven y del más viejo en esa película.\n",
     "\n"
    ]
   },
@@ -2289,6 +2305,11 @@
     "SELECT anio AS \"Año\"\n",
     "FROM MovieAwards;\n",
     "\n",
+    "\n",
+    "\n",
+    "# Primero utiliza una subconsulta para encontrar la película más larga en términos de duración.\n",
+    "# Luego, otra subconsulta se une a la tabla de premios para encontrar el año en que esta película específica recibió un premio.\n",
+    "# Finalmente, la consulta principal selecciona el año de estos premios y los muestra como \"Año\".\n",
     "\n"
    ]
   },
@@ -3241,7 +3262,7 @@
     "SELECT \n",
     "    actor.nombre AS \"Nombre del actor\",\n",
     "    COUNT(DISTINCT pelicula.id_director) AS \"Cantidad de directores\",\n",
-    "    MAX(pelicula.nombre) AS \"Nombre de una película\"  -- Puedes usar MIN o MAX para seleccionar una película\n",
+    "    MAX(pelicula.nombre) AS \"Nombre de una película\"  \n",
     "FROM \n",
     "    actor\n",
     "JOIN \n",
@@ -3254,7 +3275,13 @@
     "    COUNT(DISTINCT pelicula.id_director) > 1\n",
     "ORDER BY \n",
     "    \"Cantidad de directores\" DESC, \"Nombre del actor\";\n",
-    "\n"
+    "\n",
+    "\n",
+    "# Se etiqueta los datos\n",
+    "# Para ello, realiza una serie de uniones entre las tablas 'actor', 'actor_participa_en_pelicula' y 'pelicula' utilizando los IDs correspondientes.\n",
+    "# Luego, agrupa los resultados por el ID del actor y su nombre.\n",
+    "# Posteriormente, filtra los resultados para incluir solo aquellos actores que han trabajado con más de un director diferente.\n",
+    "# Finalmente, ordena los resultados primero por la cantidad de directores en orden descendente y luego por el nombre del actor.\n"
    ]
   },
   {
@@ -3333,7 +3360,11 @@
     "    actor.id_actor, actor.nombre\n",
     "HAVING \n",
     "    BOOL_AND(pelicula.id_director = 1);\n",
-    "\n"
+    "\n",
+    "# Busca el nombre del actor de la tabla \"actor\"\n",
+    "# Se unen las tablas 'actor', 'actor_participa_en_pelicula' y 'pelicula' para obtener la información requerida.\n",
+    "# Los resultados se agrupan por el ID del actor y su nombre.\n",
+    "# Se utiliza la función BOOL_AND para verificar si todas las películas en las que ha participado el actor tienen al director con ID 1."
    ]
   },
   {
@@ -6759,6 +6790,14 @@
     "    pma.id_premio IS NULL\n",
     "GROUP BY\n",
     "    a.nombre, p.nombre, d.nombre, sub_director.total_peliculas, sub_director.total_premios;\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Se etiqueta los datos\n",
+    "# Se unen varias tablas: actor, actor_participa_en_pelicula, pelicula, director, premio_mejor_actor y premio_mejor_pelicula para obtener la información requerida.\n",
+    "# Se utiliza una subconsulta para calcular el número total de películas y premios dirigidos por cada director.\n",
+    "# Se filtran los resultados para incluir solo aquellos actores que no han ganado premios como mejor actor.\n",
+    "# Finalmente, se agrupan los resultados por el nombre del actor, el nombre de la película, el nombre del director, el número total de películas del director y el número total de premios del director.\n",
     "\n"
    ]
   },
