--- a/Tarea_1.ipynb
+++ b/Tarea_1.ipynb
@@ -161,7 +161,7 @@
    ],
    "source": [
     "%reload_ext sql\n",
-    "%env DATABASE_URL=postgresql://postgres:1234@localhost:5432/tarea1"
+    "%env DATABASE_URL=postgresql://postgres:xxxx@localhost:5432/tarea1"
    ]
   },
   {
