--- a/Tarea_1.ipynb
+++ b/Tarea_1.ipynb
@@ -200,7 +200,7 @@
     "   host=\"localhost\",\n",
     "   user=\"postgres\",\n",
     "   dbname='tarea1',\n",
-    "   password=\"1234\"\n",
+    "   password=\"xxxxx\"\n",
     ")\n",
     "\n",
     "print(conn)\n"
